syntax = "proto3";

package chainhooks;


import "google/protobuf/empty.proto";
 
service ChainHooks {

    
    rpc GetNonce(GetNonceRequest) returns (GetNonceResponse);

    
    rpc Register(UserAuthRequest) returns (UserRegistrationResponse);

    
    rpc GetRelayer(UserAuthRequest) returns (RelayerInfo);
    
   
    rpc GetLogs(GetUserLogsRequest) returns (UserLogs); 

    
    rpc Subscribe(SubscriptionRequest) returns (SubscriptionResponse);

    
    rpc UnSubscribe(UnsubscribeRequest) returns (google.protobuf.Empty); 


}

message GetNonceRequest {
    string address = 1; 
}


message GetNonceResponse {
    uint64 nonce = 1; 
}

message UserAuthRequest {
    string address = 1;   
    string signature = 2; 
}


message UserRegistrationResponse {
    bool success = 1;  
    string message = 2; 
    string user_id = 3; 
}


message RelayerInfo {

    string owner_address = 1;
    string relayer_public_key = 2; 
}


message GetUserLogsRequest {
    string address = 1;
    string signature = 2;
}




message UserLogs {
    string address = 1; 
    repeated string logs = 2; 
}


message SubscriptionRequest {
    string address = 1;
    string signature = 2;
    SubscriptionDetails details = 3;
    RelayerAction action = 4;
}

message RelayerAction{
    int32 chain_id = 1; // chain
    string target_address = 2; // contract address
    string ABI = 3; // ABI
    string function_name = 4; // Function name
    repeated PosParam params= 5; // params for the transaction
}

message PosParam {
  uint64 pos = 1;
  string params = 2;
}
message SubscriptionResponse {
    string subscription_id = 1; 
    bool success = 2;
    string message = 3; 
}


message SubscriptionDetails {
    uint64 chain_id = 1; 
    string target_address = 2; 
    string event_signature = 5;    
}


message UnsubscribeRequest {
    string address = 1;
    string signature = 2;
    string subscription_id = 3; 
}